Attempt at benchmark, but anndata.AnnLoader not compatible

--- a/Bench/Benchmark_AnnDataSets/benchmark_AnnDataSets.ipynb
+++ b/Bench/Benchmark_AnnDataSets/benchmark_AnnDataSets.ipynb
@@ -85,7 +85,22 @@
       "/Users/adr/miniconda3/envs/scvi_hack/lib/python3.9/site-packages/anndata/_core/anndata.py:183: ImplicitModificationWarning: Transforming to str index.\n",
       "  warnings.warn(\"Transforming to str index.\", ImplicitModificationWarning)\n",
       "/Users/adr/miniconda3/envs/scvi_hack/lib/python3.9/site-packages/anndata/_core/anndata.py:183: ImplicitModificationWarning: Transforming to str index.\n",
-      "  warnings.warn(\"Transforming to str index.\", ImplicitModificationWarning)\n",
+      "  warnings.warn(\"Transforming to str index.\", ImplicitModificationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Only train data\n",
+      "15681 10976 2352 2353\n",
+      "10976 2352 4705\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/Users/adr/miniconda3/envs/scvi_hack/lib/python3.9/site-packages/anndata/_core/anndata.py:183: ImplicitModificationWarning: Transforming to str index.\n",
       "  warnings.warn(\"Transforming to str index.\", ImplicitModificationWarning)\n"
      ]
@@ -93,7 +108,7 @@
    ],
    "source": [
     "ad_dm = setup_ad_anndata_module(adata=adata, train_frac=0.7, test_frac=0.2, val_frac=0.1)\n",
-    "pt_dm = setup_simple_datamodule(adata=adata, train_frac=0.7, test_frac=0.2, val_frac=0.1, include_exprs=True,\n",
+    "pt_dm = setup_simple_datamodule(adata=adata.copy(), train_frac=0.7, include_exprs=True,\n",
     "obs_fields=[\"label\"])\n",
     "\n"
    ]
@@ -187,21 +202,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 100%|██████████| 22/22 [00:10<00:00,  2.07it/s, v_num=13, train/loss=0.612, val/loss=0.525, val/acc=0.934, train/acc=0.715]"
+      "Epoch 1: 100%|██████████| 22/22 [00:06<00:00,  3.41it/s, v_num=14, train/loss=0.588, val/loss=0.767, val/acc=0.918, train/acc=0.777]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`Trainer.fit` stopped: `max_epochs=2` reached.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1: 100%|██████████| 22/22 [00:10<00:00,  2.07it/s, v_num=13, train/loss=0.612, val/loss=0.525, val/acc=0.934, train/acc=0.715]\n"
+      "/Users/adr/miniconda3/envs/scvi_hack/lib/python3.9/site-packages/pytorch_lightning/trainer/call.py:54: Detected KeyboardInterrupt, attempting graceful shutdown...\n"
      ]
     }
    ],
@@ -226,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
